--- a/final.Rmd
+++ b/final.Rmd
@@ -286,7 +286,7 @@ df %>%
 
 ---
 
-## Boxplots - remove 'extreme outliers'? 
+## Boxplots - remove extreme outliers? 
 
 `x` is considered an 'extreme outlier' if it is more than 3*IQR away from the mean 
 
@@ -305,7 +305,7 @@ remove_outliers <- function(df, var){
 
 ---
 
-## Boxplots - remove 'extreme outliers'? 
+## Boxplots - remove extreme outliers? 
 
 ```{r message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 df %>% 
@@ -316,7 +316,11 @@ df %>%
 ```
 ---
 
-## Boxplots - remove 'moderate outliers'? 
+
+## Boxplots - remove moderate outliers? 
+
+`x` is considered an 'extreme outlier' if it is more than 3*IQR away from the mean 
+
 ```{r}
 remove_outliers <- function(df, var, threshold){
 
@@ -331,7 +335,7 @@ remove_outliers <- function(df, var, threshold){
 ```
 ---
 
-## Boxplots - remove 'extreme outliers'? 
+## Boxplots - remove moderate outliers? 
 ```{r message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 df %>% 
   remove_outliers(price,1.5) %>% 
@@ -352,10 +356,10 @@ df %>%
 ---
 
 ## Histograms
-```{r message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
+```{r fig.width=5, fig.height=5}
 df %>% 
   ggplot() + 
-  geom_histogram(aes(x = price), binwidth = 2)
+  geom_histogram(aes(x = price), binwidth = 2) #<<
 ```
 
 ---
@@ -461,7 +465,8 @@ df %>%
 
 ---
 
-## Two variables
+## Two variables  - both are continuous
+
 ```{r message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
 p1 <- df %>% 
   ggplot(aes(x = total_sqft, y = price)) + 
@@ -517,3 +522,224 @@ p4
 gridExtra::grid.arrange(p1, p2, p3, p4, nrow = 2)
 ```
 
+---
+## Outcome vs continuous variables
+
+```{r message=FALSE, warning=FALSE, fig.width=7, fig.height=7, echo=FALSE}
+
+g1  <- df %>% 
+  drop_na(price, bedrooms) %>% 
+  remove_outliers(price,3) %>% 
+  ggplot(aes(x = bedrooms, y = price)) + 
+  geom_point() +
+  geom_smooth()
+
+g2  <- df %>% 
+  drop_na(price, balcony) %>% 
+  remove_outliers(price,3) %>% 
+  ggplot(aes(x = balcony, y = price)) + 
+  geom_point() +
+  geom_smooth()
+
+g3  <- df %>% 
+  drop_na(price, bath) %>% 
+  remove_outliers(price,3) %>% 
+  ggplot(aes(x = bath, y = price)) + 
+  geom_point() +
+  geom_smooth()
+
+g4  <- df %>% 
+  drop_na(price, total_sqft) %>% 
+  remove_outliers(price,3) %>% 
+  ggplot(aes(x = total_sqft, y = price)) + 
+  geom_point() +
+  geom_smooth()
+
+gridExtra::grid.arrange(g1,g2,g3,g4)
+
+```
+
+---
+
+## Correlations
+
+```{r message=FALSE, warning=FALSE, echo=FALSE}
+library(corrr)
+
+plot_lower_diagonal <- function(df){
+numeric_df <-  df %>% 
+  select_if(is.numeric) %>% 
+  replace(., is.na(.), 0)
+  
+correlations <- round(cor(numeric_df),1)
+ggcorrplot::ggcorrplot(correlations,
+           hc.order = TRUE,
+           type = "lower",
+           outline.color = "white") + 
+  theme(axis.text.x = element_text(angle = 90)) +
+  xlab(NULL) +
+  ylab(NULL) +
+  labs(fill = 'Correlation') +
+  ggtitle("Correlations across autodispatch metrics")
+}
+
+get_correlations <- function(df){
+  df %>% 
+  select_if(is.numeric) %>% 
+  replace(., is.na(.), 0) %>% 
+  correlate() %>% 
+  stretch() %>% 
+  rename(var1 = x,
+         var2 = y)}
+
+plot_lower_diagonal(df)
+```
+
+---
+## Continuous vs Discrete - grouping
+
+```{r message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
+
+df %>% 
+  remove_outliers(price,3) %>% 
+  ggplot() + 
+  geom_density(aes(x = price, group = area_type, colour = area_type))
+```
+
+---
+## Continuous vs Discrete - faceting
+
+```{r message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
+df %>% 
+  remove_outliers(price,3) %>% 
+  ggplot() + 
+  geom_density(aes(x = price)) +
+  facet_wrap(vars(area_type))
+```
+
+---
+## Continuous vs Discrete - grouped boxplots
+
+```{r message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
+df %>% 
+  remove_outliers(price,3) %>% 
+  ggplot() + 
+  geom_boxplot(aes(x = area_type, y = price))
+```
+
+---
+
+# Continuous vs Discrete - grouped summary statistics
+
+```{r message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
+df %>% 
+  group_by(location) %>% 
+  summarize(average_price = mean(price),
+            median_price = median(price)) %>% 
+  arrange(-average_price) %>% 
+  top_n(5)
+```
+
+---
+# Continuous vs Discrete - grouped summary statistics
+
+```{r message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
+df %>% 
+  group_by(area_type) %>% 
+  summarize(average_price = mean(price),
+            median_price = median(price)) %>% 
+  arrange(-average_price) %>% 
+  top_n(5)
+```
+
+---
+# Continuous vs cut variable
+
+```{r message=FALSE, warning=FALSE, fig.width=5, fig.height=5}
+df %>% 
+  ggplot() + 
+  geom_boxplot(aes(x = bedroom_cat, y = price))
+```
+
+---
+# What have we learned? 
+
+--
+* There are probably too many societies to meaningfully model 
+
+
+--
+* Houses with `plot_area` are generally more expensive that the other categories of `area_type`
+
+
+--
+* Prices are more variable in homes with more bedrooms
+
+
+--
+* Larger houses are more expensive overall
+
+
+--
+* Number of bedrooms is highly correlated with the number of bathrooms
+
+
+---
+# What questions do we have?
+
+--
+* Can location be reclassified?
+
+
+--
+* Are houses that are not in societies different from those that are in? Missing not at random?
+
+
+--
+* How are location, size, and price related to each other?
+
+--
+* What's the deal with `availability`?
+
+--
+
+---
+# Remember
+
+--
+* YOU are your audience
+
+
+--
+* You are exploring, not explaining 
+
+
+--
+* If it needs to be done more than once, write a function 
+
+
+--
+* Resist the urge to hard code 
+
+
+--
+* Don't spend time making your graphs pretty
+
+
+--
+* Start developing a body of functions that you typically use 
+
+
+---
+# Thank you so much!
+
+You can find me at 
+
+
+@SushGopalan on Twitter
+
+
+sushmitavgopalan16 on Github
+
+
+www.sushmitagopalan.com
